--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="guess">Guess!</string>
+    <string name="new_game">New Game</string>
+    <string name="about">About</string>
+    <string name="stats">Stats</string>
 </resources>
